--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "chessapp",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,jsx --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
